// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        className="sub"
        onClick={[Function]}
        type="button"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
     
    <button
      className="More"
      onClick={[Function]}
      type="button"
    >
      More
    </button>
  </div>
</div>
`;

exports[`Button snapshot 1`] = `
<button
  className=""
  type="button"
>
  Button test
</button>
`;

exports[`Search snapshot 1`] = `
<form>
  <input
    type="text"
  />
  <button
    className="sub"
    type="button"
  >
    Search
  </button>
</form>
`;

exports[`Table snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-headers"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-table-header button-active"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
      
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <button
        className="button-table-header"
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
     
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-table-header"
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
      
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-table-header"
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
